# NodeProxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  railway.toml  server.json  tsconfig.json
integrations/: README.md  UPSTREAM.md
integrations/mcp-registry/: PR_DESCRIPTION.md  publish.sh  server-entry.json
integrations/python/: README.md  publish.sh  pyproject.toml
integrations/python/examples/: langchain_agent.py  quickstart.py
integrations/python/langchain-community-pr/: PR_DESCRIPTION.md  submit-pr.sh
integrations/python/langchain-community-pr/nodeproxy/: __init__.py  tool.py
integrations/python/langchain-community-pr/patches/: 0001-feat-community-add-NodeProxy-x402-markdown-parser-to.patch
integrations/python/langchain-community-pr/tests/: test_nodeproxy_tool.py
integrations/python/nodeproxy_tools/: __init__.py  cli.py  client.py  constants.py  crewai.py  langchain.py  x402_setup.py
integrations/python/tokensqueezer_tools/: __init__.py  client.py  constants.py  langchain.py  x402_setup.py
integrations/python/vectorcache_tools/: __init__.py  client.py  constants.py  langchain.py  x402_setup.py
integrations/typescript/: README.md  package-lock.json  package.json  publish.sh
integrations/typescript/src/: client.ts  index.ts  langchain-tool.ts  x402-fetch.ts
registry/: server.json
scripts/: promote-discovery.sh  test-paid-parse.sh
src/: config.ts  index.ts  tools.ts
src/agentkit/: inbox.ts  kv.ts  lock.ts  pay.ts  secret.ts
src/billing/: accounts.ts  adminRoutes.ts  apiGate.ts  billing.ts  index.ts  store.ts  usage.ts
src/discovery/: manifest.ts
src/http/: adapter.ts  app.ts  context.ts  parseResponse.ts  toolExecute.ts
src/lib/: guards.ts  parseCache.ts  urlSafety.ts
src/mcp/: http.ts  server.ts  stdio.ts
src/mpp/: config.ts  credential.ts  server.ts
src/parser/: botDetect.ts  captchaSolver.ts  playwrightFetch.ts  resolve.ts  scrapeDoFetch.ts  stealthFetch.ts  stealthResolve.ts  stealthSurface.ts  surface.ts
src/timer/: handler.ts  scheduler.ts  store.ts
src/x402/: facilitators.ts  negotiate.ts  networks.ts  payments.ts  v1.ts
test/: cache.test.ts  mpp.test.ts  negotiate.test.ts  networks.test.ts  parser.test.ts  stealth.test.ts
