[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodeproxy-tools"
version = "0.1.1"
description = "LangChain/CrewAI integrations for the NodeProxy x402 web surface markdown parser"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "pgalyen1987", email = "pgalyen87@gmail.com" }]
keywords = ["langchain", "crewai", "mcp", "x402", "web-scraping", "markdown", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
x402 = [
  "x402[requests,evm]>=2.0",
  "eth-account>=0.10",
]
langchain = [
  "langchain-core>=0.2",
  "x402[requests,evm]>=2.0",
  "eth-account>=0.10",
]
crewai = [
  "crewai>=0.80",
  "x402[requests,evm]>=2.0",
  "eth-account>=0.10",
]
all = [
  "nodeproxy-tools[langchain,crewai]",
]

[project.urls]
Homepage = "https://github.com/pgalyen1987/NodeProxy"
Documentation = "https://github.com/pgalyen1987/NodeProxy/tree/main/integrations"
Repository = "https://github.com/pgalyen1987/NodeProxy"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodeproxy_tools*"]

[project.scripts]
nodeproxy-parse = "nodeproxy_tools.cli:main"
