[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodeproxy-tools"
version = "0.2.0"
description = "Python clients for NodeProxy, TokenSqueezer, and VectorCache x402 agent APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "pgalyen1987", email = "pgalyen87@gmail.com" }]
keywords = ["langchain", "crewai", "mcp", "x402", "web-scraping", "markdown", "agents", "tokensqueezer", "vectorcache"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
x402 = [
  "x402[requests,evm,svm]>=2.0",
  "eth-account>=0.10",
  "solders>=0.26",
]
langchain = [
  "langchain-core>=0.2",
  "x402[requests,evm,svm]>=2.0",
  "eth-account>=0.10",
  "solders>=0.26",
]
crewai = [
  "crewai>=0.80",
  "x402[requests,evm,svm]>=2.0",
  "eth-account>=0.10",
  "solders>=0.26",
]
tokensqueezer = [
  "langchain-core>=0.2",
  "x402[requests,evm,svm]>=2.0",
  "eth-account>=0.10",
  "solders>=0.26",
]
vectorcache = [
  "langchain-core>=0.2",
  "x402[requests,evm,svm]>=2.0",
  "eth-account>=0.10",
  "solders>=0.26",
]
all = [
  "nodeproxy-tools[langchain,crewai,tokensqueezer,vectorcache]",
]

[project.urls]
Homepage = "https://github.com/pgalyen1987/NodeProxy"
Documentation = "https://github.com/pgalyen1987/NodeProxy/tree/main/integrations"
Repository = "https://github.com/pgalyen1987/NodeProxy"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodeproxy_tools*", "tokensqueezer_tools*", "vectorcache_tools*"]

[project.scripts]
nodeproxy-parse = "nodeproxy_tools.cli:main"
